# ArenaAllocator

./: CMakeLists.txt  README.md
benchmarks/: bench_all.cpp  bench_allocation.cpp  bench_constructor.cpp  bench_core_allocation.cpp  bench_frame_management.cpp  bench_helper.h  bench_introspection.cpp  bench_lifecycle.cpp  bench_object_lifecycle.cpp  bench_reset.cpp  bench_scope.cpp  bench_state_management.cpp
cmake/: ArenaProConfig.cmake.in
examples/: example_basic.cpp  example_helper.h  example_lifecycle.cpp  example_scope.cpp  example_stats.cpp
include/: Arena.h  Arena.tpp  ArenaScope.h
include/ArenaPro/: Arena.h  Arena.tpp  ArenaScope.h
src/: Arena.cpp
tests/: test_all.cpp  test_constructor.cpp  test_core_allocation.cpp  test_frame.cpp  test_frame_management.cpp  test_helper.h  test_introspection.cpp  test_lifecycle.cpp  test_memory.cpp  test_move.cpp  test_object_lifecycle.cpp  test_scope.cpp  test_state.cpp  test_state_management.cpp  test_stats.cpp
